crates/tuna/tests/parser/fail/self-class-field.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfClassField = (
  ----

  |a b c self d e f|

  run = (42)
)
